# ferrolink

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  prometheus.yml  reminders.md  server.cnf  startup.md  test_file.txt
.cargo/: audit.toml
.github/workflows/: ci.yml  docker-publish.yml
agent/: Cargo.toml
agent/src/: main.rs
bench/: RESULTS.md  latency.sh
client/: Cargo.toml
client/src/: main.rs
dashboard/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: main.jsx
grafana/: agent-overview.json  alerts.yml
migrations/: 20231106224510_init.sql
shared/: Cargo.toml
shared/src/: lib.rs
