[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
sysinfo = "0.29"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.4"
futures = "0.3"
tokio-rustls = { version = "0.24" }
rustls-pemfile = "1.0"
rustls = { version = "0.21" }
