[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
sysinfo = "0.29"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.4"
futures = "0.3"
tokio-rustls = { version = "0.26.2" }
rustls-pemfile = "1.0"
rustls = { version = "0.23.5" }
hyper = { version = "0.14", features = ["full"] }
prometheus = "0.14"
once_cell = "1.17"
sha2 = "0.10"
hex = "0.4"
lettre = { version = "0.11.18", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
sqlx = { version = "0.8.1", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json"] }
dotenvy = "0.15"