[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.4"
futures = "0.3"
tokio-rustls = { version = "0.24" }
rustls-pemfile = "1.0"
rustls = { version = "0.21" }
sha2 = "0.10"
hex = "0.4"
